# secure_fl

./: .gitignore  CMakeLists.txt  CMakeLists_orig.txt  README.md  client.cpp  client.h  common.h  main.cpp  masking.cpp  masking.h  mk_ckks.cpp  mk_ckks.h  run.sh  server.cpp  server.h  test_debug.cpp
log_files/: client_perf_log.csv  log_communication_analysis.csv  log_computation_client.csv  log_computation_server.csv  log_scaling_clients_client.csv  log_scaling_clients_server.csv  log_scaling_datasize_client.csv  log_scaling_datasize_server.csv  server_perf_log.csv
